# boteye_ros

./: .gitignore  CMakeLists.txt  README.md  boteye_ros.kdev4
cmake/: firmware_config.h.in
src/: XP_sensor.cc  XP_sensor_driver.cc  ros_node  ros_node.cpp  v4l2.cc
src/helper/: basic_image_utils.cc  counter_32_to_64.cc  timer.cc
yaml/: boteye_cam.yaml
